MyProject/force-app/main/default/objects/Scholarship_Request__c/Scholarship_Request__c.object-meta.xml
<CustomObject>
    <label>Scholarship Request</label>
    <nameField>
        <label>Scholarship Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scholarship Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>