MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/Assigned_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scholarship_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>