MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/Is_High_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Value__c</fullName>
    <formula>Request_Amount__c &gt; 5000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is High Value?</label>
    <type>Checkbox</type>
</CustomField>