MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>Request_Amount__c</fullName>
    <label>Request Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>