MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/Scholarship_Number__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Number__c</fullName>
    <displayFormat>SCH-{0000}</displayFormat>
    <label>Scholarship Number</label>
    <type>AutoNumber</type>
</CustomField>