MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/Scholarship_Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Rejection_Reasons__c</fullName>
    <label>Scholarship Rejection Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ineligible Major</fullName>
            </value>
            <value>
                <fullName>GPA Below Requirement</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
            <value>
                <fullName>Late Submission</fullName>
            </value>
            <value>
                <fullName>Financial Criteria Not Met</fullName>
            </value>
            <value>
                <fullName>Duplicate Application</fullName>
            </value>
            <value>
                <fullName>Residency Restriction</fullName>
            </value>
            <value>
                <fullName>Funds Exhausted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>