MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/student_name__c.field-meta.xml
<CustomField>
    <fullName>student_name__c</fullName>
    <label>student name</label>
    <referenceTo>student__c</referenceTo>
    <relationshipLabel>Scholarship Requests</relationshipLabel>
    <relationshipName>Scholarship_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>