MyProject/force-app/main/default/objects/Scholarship_Request__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall 2026</fullName>
            </value>
            <value>
                <fullName>Spring 2026</fullName>
            </value>
            <value>
                <fullName>Summer 2026.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>