MyProject/force-app/main/default/objects/Scholarship_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Request_Amount__c</columns>
    <columns>Scholarship_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>